// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> -> as prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-0:focus {
  outline: 0;
}

.emotion-0[type='number']::-webkit-inner-spin-button,
.emotion-0[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0[type='search'] {
  -webkit-appearance: none;
  outline-offset: -2px;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.8;
}

.emotion-0::-moz-placeholder {
  opacity: 0.8;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.8;
}

.emotion-0::placeholder {
  opacity: 0.8;
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`<Input> -> box properties 1`] = `
<DocumentFragment>
  .emotion-0 {
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  display: block;
}

.emotion-0:focus {
  outline: 0;
}

.emotion-0[type='number']::-webkit-inner-spin-button,
.emotion-0[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0[type='search'] {
  -webkit-appearance: none;
  outline-offset: -2px;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.8;
}

.emotion-0::-moz-placeholder {
  opacity: 0.8;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.8;
}

.emotion-0::placeholder {
  opacity: 0.8;
}

<input
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`<Input> -> flex properties 1`] = `
<DocumentFragment>
  .emotion-0 {
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0:focus {
  outline: 0;
}

.emotion-0[type='number']::-webkit-inner-spin-button,
.emotion-0[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0[type='search'] {
  -webkit-appearance: none;
  outline-offset: -2px;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.8;
}

.emotion-0::-moz-placeholder {
  opacity: 0.8;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.8;
}

.emotion-0::placeholder {
  opacity: 0.8;
}

<input
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`<Input> -> placeholder is null 1`] = `
<DocumentFragment>
  .emotion-0 {
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-0:focus {
  outline: 0;
}

.emotion-0[type='number']::-webkit-inner-spin-button,
.emotion-0[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0[type='search'] {
  -webkit-appearance: none;
  outline-offset: -2px;
}

<input
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`<Input> -> placeholder/hover/focus 1`] = `
<DocumentFragment>
  .emotion-0 {
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-0:focus {
  outline: 0;
}

.emotion-0[type='number']::-webkit-inner-spin-button,
.emotion-0[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0[type='search'] {
  -webkit-appearance: none;
  outline-offset: -2px;
}

.emotion-0::-webkit-input-placeholder {
  color: black;
}

.emotion-0::-moz-placeholder {
  color: black;
}

.emotion-0:-ms-input-placeholder {
  color: black;
}

.emotion-0::placeholder {
  color: black;
}

.emotion-0:hover {
  background: red;
}

.emotion-0:focus {
  background: blue;
}

<input
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`<Input> -> text properties 1`] = `
<DocumentFragment>
  .emotion-0 {
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  font-weight: 700;
}

.emotion-0:focus {
  outline: 0;
}

.emotion-0[type='number']::-webkit-inner-spin-button,
.emotion-0[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0[type='search'] {
  -webkit-appearance: none;
  outline-offset: -2px;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.8;
}

.emotion-0::-moz-placeholder {
  opacity: 0.8;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.8;
}

.emotion-0::placeholder {
  opacity: 0.8;
}

<input
    class="emotion-0"
  />
</DocumentFragment>
`;
